# UI-MATCHER

./: README.md  pyproject.toml  requirements.txt
config/: default_weights.yaml
tests/: conftest.py  test_pipeline.py
ui_diff/: __init__.py  _config.py  api.py  cli.py  dom_capture.py  fusion.py  preprocess.py  report.py
ui_diff.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ui_diff/layers/: __init__.py  color_layer.py  phash_layer.py  position_layer.py  semantic_layer.py  ssim_layer.py  text_layer.py
