[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ui-diff"
version = "1.0.0"
description = "UI Visual Match Validator — position & color focused screenshot comparison"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "scikit-image>=0.21.0",
    "imagehash>=4.3.1",
    "scipy>=1.11.0",
    "colormath>=3.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "typer[all]>=0.9.0",
    "pyyaml>=6.0.1",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]
dom = ["playwright>=1.40.0"]
semantic = ["open-clip-torch>=2.24.0"]

[project.scripts]
ui-diff = "ui_diff.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["ui_diff*"]

[tool.setuptools.package-data]
ui_diff = ["../config/*.yaml"]
